--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,20 @@
-// Начните писать стили здесь
+// global
+@import "global/variables.less";
+@import "global/global.less";
+@import "global/fonts.less";
+
+// blocks
+
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/site-list.less";
+@import "blocks/intro.less";
+@import "blocks/about.less";
+@import "blocks/reasons.less";
+@import "blocks/features.less";
+@import "blocks/offer.less";
+@import "blocks/map.less";
+@import "blocks/button.less";
+@import "blocks/page-footer.less";
+@import "blocks/social.less";
