Стилизация главной страницы

--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -2,9 +2,7 @@
   background-image: url(../../img/intro-back-mobile.jpg);
   background-repeat: no-repeat;
   width: 901px;
-  height: 389px;
-
-}
+  height: 389px;}
 
 .intro-triangle{
   background-image: url(../../img/intro-triangle.png);
