--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -2,9 +2,7 @@
   background-color: @grey;
 }
 
-
-.reasons-item:nth-child(1),
-.reasons-item:nth-child(3){
+.reasons-item:nth-child(1), .reasons-item:nth-child(3){
   background-color: @blue-main;
 }
 
@@ -29,6 +27,7 @@
   font-size: 18px;
   line-height: 26px;
 }
+
 .reasons-item__desc{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
