Стилизация страницы формы

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,4 +1,11 @@
 .button{
   background-color: @blue-main;
   color: @white;
+  border: none;
+  text-transform: uppercase;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
 }
