--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,8 +1,16 @@
-.intro-index{
+.intro{
   background-image: url(../../img/intro-back-mobile.jpg);
   background-repeat: no-repeat;
   width: 901px;
-  height: 389px;}
+  height: 389px;
+}
+
+// .intro-index{
+//   background-image: url(../../img/intro-back-mobile.jpg);
+//   background-repeat: no-repeat;
+//   width: 901px;
+//   height: 389px;
+// }
 
 .intro-triangle{
   background-image: url(../../img/intro-triangle.png);
@@ -20,4 +28,12 @@
   width: 282px;
   height: 214px;
 }
+
+.intro-logo{
+  background-image: url(../../img/intro-logo.svg);
+  background-repeat: no-repeat;
+  width: 229px;
+  height: 39px;
+}
+
 
