--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,10 @@
 @import "blocks/button.less";
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
+@import "blocks/form-title.less";
+@import "blocks/fullname.less";
+@import "blocks/contacts.less";
+@import "blocks/impression.less";
+@import "blocks/attractions.less";
+@import "blocks/review.less";
+@import "blocks/copyright.less";
