Стилизация страницы каталога

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,3 +25,5 @@
 @import "blocks/attractions.less";
 @import "blocks/review.less";
 @import "blocks/copyright.less";
+@import "blocks/gallery.less";
+@import "blocks/video.less";
