--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,8 +1,17 @@
 .intro{
-  background-image: url(../../img/intro-back-mobile.jpg);
+  background-image: url(../img/intro-back-mobile.jpg);
   background-repeat: no-repeat;
   width: 901px;
   height: 389px;
+
+  display: flex;
+  align-items: center;
+
+    // @media (min-width: @tablet-width){
+    //   background-image: url(../img/intro-back-desktop.jpg);
+    //   width: 1200px;
+    //   height: 518px;
+    // }
 }
 
 // .intro-index{
@@ -13,7 +22,7 @@
 // }
 
 .intro-triangle{
-  background-image: url(../../img/intro-triangle.png);
+  background-image: url(../img/intro-triangle.png);
   background-repeat: no-repeat;
   z-index: 2;
   height: 57px;
@@ -22,7 +31,7 @@
 }
 
 .intro-text{
-  background-image: url(../../img/text-index.svg);
+  background-image: url(../img/intro-text.svg);
   background-repeat: no-repeat;
   z-index: 1;
   width: 282px;
@@ -30,7 +39,7 @@
 }
 
 .intro-logo{
-  background-image: url(../../img/intro-logo.svg);
+  background-image: url(../img/intro-logo.svg);
   background-repeat: no-repeat;
   width: 229px;
   height: 39px;
