--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -7,3 +7,8 @@
 @form-grey: #F2F2F2;
 @dark-grey: #333333;
 
+// viewports
+
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width-only: 767px;
