--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,11 @@
 .main-nav{
   background-color: @white;
 }
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
 .main-nav__toogle{
   background-image: url(../../img/icon-menu.svg);
@@ -8,4 +13,7 @@
   width: 23px;
   height: 22px;
   border: none;
+  @media (min-width: @tablet-width){
+    display: none;
+  }
 }
