--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -1,3 +1,18 @@
+.offer{
+  text-align: center;
+  padding-top: 33px;
+  @media (min-width: @tablet-width) {
+    padding: 58px 78px 0;
+    width: 520px;
+    height: 110px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    max-width: 520px;
+  }
+}
+
 .offer-title{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
