Адаптивная сетка для главной страницы

--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -26,14 +26,14 @@
 }
 
 .reasons-item:nth-child(1) .reasons-item__img{
-  background-image: url(../../img/photo-city-index.jpg);
+  background-image: url(../img/photo-city-index.jpg);
   background-repeat: no-repeat;
   width: 520px;
   height: 260px;
 }
 
 .reasons-item:nth-child(3) .reasons-item__img{
-  background-image: url(../../img/photo-bridge-index.jpg);
+  background-image: url(../img/photo-bridge-index.jpg);
   background-repeat: no-repeat;
   width: 520px;
   height: 260px;
