--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -33,7 +33,7 @@
 }
 
 .site-list__toogle{
-  background-image: url(../../img/icon-menu-close.svg);
+  background-image: url(../img/icon-menu-close.svg);
   background-color: @blue-main;
   width: 22px;
   height: 22px;
