--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -36,21 +36,21 @@
 }
 
 .features-item:nth-child(1) .features-item__img{
-  background-image: url(../../img/icon-house.svg);
+  background-image: url(../img/icon-house.svg);
   background-color: @white;
   width: 39px;
   height: 37px;
 }
 
 .features-item:nth-child(2) .features-item__img{
-  background-image: url(../../img/icon-gift.svg);
+  background-image: url(../img/icon-gift.svg);
   background-color: @white;
   width: 32px;
   height: 38px;
 }
 
 .features-item:nth-child(3) .features-item__img{
-  background-image: url(../../img/icon-burger.svg);
+  background-image: url(../img/icon-burger.svg);
   background-color: @white;
   width: 40px;
   height: 35px;
