--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,7 +8,7 @@
 }
 
 .main-nav__toogle{
-  background-image: url(../../img/icon-menu.svg);
+  background-image: url(../img/icon-menu.svg);
   background-color: @white;
   width: 23px;
   height: 22px;
