--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,8 +1,19 @@
 .social__list{
   list-style: none;
+  width: 151px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .social__item{
   width: 46px;
   height: 48px;
   background-color: @blue-main;
+  text-align: center;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
