--- a/source/less/blocks/fullname.less
+++ b/source/less/blocks/fullname.less
@@ -1,3 +1,21 @@
+.fullname-list{
+  list-style: none;
+}
+
+.fullname{
+  width: 100%;
+  @media (min-width: @tablet-width){
+    display: flex;
+    flex-direction: column;
+    // width: 266px;
+    width: 50%;
+
+  }
+  // @media (min-width: @desktop-width){
+  //   width: 400px;
+  // }
+
+}
 .fullname-name,
 .fullname-surname,
 .fullname-patronymic{
