--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -6,6 +6,7 @@
 
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
     // @media (min-width: @tablet-width){
     //   background-image: url(../img/intro-back-desktop.jpg);
