--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,7 +1,26 @@
+// .review__wrapper{
+//   display: flex;
+//   flex-direction: column;
+// }
+
+.review-item{
+  display: flex;
+  flex-direction: column;
+}
+
 .review-item textarea{
-width: 279px;
-height: 160px;
-background-color: @form-grey;
+  width: 279px;
+  height: 160px;
+  background-color: @form-grey;
+  margin: auto;
+  border: none;
+    @media (min-width: @tablet-width){
+    width: 648px;
+    }
+
+    @media (min-width: @desktop-width){
+      width: 960px;
+    }
 }
 
 .review-item ::placeholder{
@@ -13,7 +32,44 @@ background-color: @form-grey;
   color: @black;
 }
 
+.review-title{
+  text-align: center;
+  margin-bottom: 15px;
+    @media (min-width: @tablet-width){
+      margin-bottom: 55px;
+    }
+}
+
 .review-send{
   width: 280px;
   height: 58px;
+}
+
+.review-send__wrapper{
+  display: flex;
+  justify-content: space-between;
+  margin: 51px auto 50px;
+  width: 280px;
+    @media (min-width: @tablet-width){
+      width: 648px;
+      margin-top: 58px;
+    }
+
+    @media (min-width: @desktop-width){
+      width: 960px;
+    }
+}
+
+.explanation{
+  display: none;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: @dark-grey;
+    @media (min-width: @tablet-width){
+    display: inline;
+  }
 }
