Адаптивная сетка для страницы каталога

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -61,6 +61,20 @@
     }
 }
 
+.about-catalog{
+  width: 299px;
+  height: 153px;
+      @media (min-width: @tablet-width) {
+        width: 458px;
+        height: 130px;
+      }
+
+      @media (min-width: @desktop-width) {
+        max-width: 458px;
+        height: 118px;
+      }
+}
+
 .about-triangle{
   @media (min-width: @tablet-width) {
     display: none;
