--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -15,6 +15,10 @@
   line-height: 24px;
   text-transform: uppercase;
   color: @dark-grey;
+  margin-bottom: 30px;
+    @media (min-width: @tablet-width){
+      margin-bottom: 60px;
+    }
 }
 
 .video-volume{
@@ -28,4 +32,18 @@
   width: 280px;
   height: 66px;
   background-color: @form-grey;
+}
+
+.video__wrapper{
+  margin: 59px auto 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+    @media (min-width: @tablet-width){
+      width: 648px;
+    }
+    @media (min-width: @desktop-width){
+      width: 800px;
+    }
 }
