Декоративные элементы главной страницы

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -30,19 +30,20 @@
   line-height: 26px;
   color: @dark-grey;
   // margin: 0;
+  margin-top: 26px;
 }
 
 .about-index{
   width: 285px;
-  height: 162px;
+
+  margin: 32px auto 11px;
     @media (min-width: @tablet-width) {
       width: 520px;
-      height: 110px;
-    }
 
+      margin: 44px auto 53px;
+    }
     @media (min-width: @desktop-width) {
-      max-width: 483px;
-      height: 110px;
+      margin: 55px auto 41px;
     }
 }
 
