--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,23 +1,29 @@
 .features-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 416px;
   @media (min-width: @tablet-width){
-    display: flex;
+    height: 256px;
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 .features-item{
-  width: 290px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   text-align: center;
   padding: 35px auto 40px;
     @media (min-width: @tablet-width){
       height: 256px;
-      width: 33%;
+      // width: 33%;
       display: flex;
       flex-direction: column;
     }
-}
+  }
 
 .features-item__title{
   font-family: "PT Sans", "Arial", sans-serif;
