--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,42 +1,44 @@
 .intro{
-  background-image: url(../img/intro-back-mobile.jpg);
+  background-image: url(../img/intro-back.jpg);
   background-repeat: no-repeat;
-  width: 901px;
+  max-width: 100%;
   height: 389px;
+  background-size: cover;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-    // @media (min-width: @tablet-width){
-    //   background-image: url(../img/intro-back-desktop.jpg);
-    //   width: 1200px;
-    //   height: 518px;
-    // }
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
+  position: relative;
+    @media (min-width: @tablet-width){
+      height: 518px;
+    }
 }
 
-// .intro-index{
-//   background-image: url(../../img/intro-back-mobile.jpg);
-//   background-repeat: no-repeat;
-//   width: 901px;
-//   height: 389px;
-// }
-
 .intro-triangle{
-  background-image: url(../img/intro-triangle.png);
-  background-repeat: no-repeat;
   z-index: 2;
-  height: 57px;
-  width: 1201px;
-  border-radius: 0px;
+  height: 56px;
+  max-width: 100%;
+  object-fit: cover;
+  margin-top: -56px;
 }
 
 .intro-text{
-  background-image: url(../img/intro-text.svg);
-  background-repeat: no-repeat;
   z-index: 1;
   width: 282px;
-  height: 214px;
+  margin: 0 auto 0;
+  padding: 90px 0 85px;
+
+    img{
+      width: 100%;
+      object-fit: cover;
+    }
+
+    @media (min-width: @tablet-width){
+      width: 461px;
+      margin: 0 auto 0;
+      padding: 77px 0 90px;
+      // height: 350px;
+    }
 }
 
 .intro-logo{
