--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -1,14 +1,12 @@
 .offer{
   text-align: center;
   padding-top: 33px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @media (min-width: @tablet-width) {
     padding: 58px 78px 0;
-    width: 520px;
-    height: 110px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin: 0 auto;
     max-width: 520px;
   }
 }
@@ -27,15 +25,21 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
+  margin-top: 20px;
+  margin-bottom: 27px;
+    @media (min-width: @tablet-width) {
+      margin-bottom: 37px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 42px;
+    }
 }
 
-.offer__find{
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
-  border: 2px solid @blue-main;
+.offer a{
   width: 280px;
   height: 58px;
+    @media (min-width: @tablet-width) {
+      width: 458px;
+    }
 }
