--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,5 @@
 .page-header{
+  height: 56px;
   color: @black;
   background-color: @white;
   text-transform: uppercase;
@@ -7,6 +8,26 @@
 
   display: flex;
   flex-direction: column;
+
+  position: relative;
 }
 
+.page-header__logo img{
+  width: 102px;
+  height: 84px;
+    @media (min-width: @desktop-width){
+      width: 187px;
+      height: 97px;
+    }
+}
 
+.page-header__logo{
+  position: absolute;
+  padding: 0 20px 0 20px;
+  left: 50%;
+  margin-left: -61px;
+  z-index: 1;
+  @media (min-width: @desktop-width){
+    margin-left: -104px;
+  }
+}
