--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,29 +5,59 @@
   line-height: 40px;
   font-weight: bold;
   color: @white;
-     a{
-      color: @white;
-      text-decoration: none;
-    }
+  height: 220px;
     @media (min-width: @tablet-width){
+      height: 56px;
       display: flex;
       justify-content: space-between;
-
       background-color: @white;
-        a{
-        color: @black;
-        }
     }
+}
+
+.site-list a{
+  color: @white;
+  text-decoration: none;
+
+  @media (min-width: @tablet-width){
+    color: @black;
+      // &:hover,
+      // &:focus {
+      //   color: @blue-main;
+      //   background-color: @white;
+      // }
+      // &:active {
+      //   opacity: .3;
+      //   background-color: @white;
+      // }
+  }
 }
 
 .site-list__item{
   box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2);
   height: 55px;
+  width: 100%;
   text-align: center;
-  display: flex;
-  align-items: center;
-    @media (min-width: @tablet-width){
+  position: relative;
+  text-align: center;
+  display: block;
+
+      @media (min-width: @tablet-width){
       box-shadow: none;
+      }
+
+    &:hover,
+    &:focus {
+      background-color: @blue-hover;
+        @media (min-width: @tablet-width){
+          background-color: @white;
+        }
+    }
+    &:active{
+      background-color: @blue-down;
+      opacity: .3;
+        @media (min-width: @tablet-width){
+          background-color: @white;
+        }
     }
 }
 
@@ -37,6 +67,17 @@
   width: 22px;
   height: 22px;
   border: none;
+  position: absolute;
+  cursor: pointer;
+  top: 17px; right: 20px; bottom: 16px;
+    &:hover,
+    &:focus {
+      opacity: .6;
+    }
+    &:active{
+      opacity: .3;
+    }
+
     @media (min-width: @tablet-width){
       display: none;
     }
