Декоративные элементы главной страницы

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,7 +7,7 @@
   list-style: none;
 }
 
-.main-nav__toogle{
+.main-nav--closed .main-nav__toogle{
   background-image: url(../img/icon-menu.svg);
   background-color: @white;
   width: 23px;
@@ -28,6 +28,49 @@
     display: none;
   }
 }
+
+.main-nav--opened .main-nav__toogle{
+  background-image: url(../img/icon-menu-close.svg);
+  background-color: @blue-main;
+  width: 22px;
+  height: 22px;
+  border: none;
+  position: absolute;
+  cursor: pointer;
+  top: -205px;
+  right: 20px;
+  z-index: 3;
+    &:hover,
+    &:focus {
+      opacity: .6;
+    }
+    &:active{
+      opacity: .3;
+    }
+
+    @media (min-width: @tablet-width){
+      display: none;
+    }
+}
+
+// .main-nav--closed .main-nav__toggle{
+//   content: "";
+//   background-image: url(../img/icon-menu.svg);
+//   position: absolute;
+//   top: 17px;
+//   right: 20px;
+//   width: 23px;
+//   height: 22px;
+//   // background-color: #ffffff;
+//   // box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+// }
+
+// .main-nav--closed .main-nav__toggle:active{
+//   background-color: fade(#ffffff, 30%);
+//   box-shadow:
+//     0 8px 0 0 fade(#ffffff, 30%),
+//     0 16px 0 0 fade(#ffffff, 30%);
+// }
 
 @media (max-width: @mobile-width-only) {
   // .main-nav--closed .site-list__item {
@@ -51,29 +94,29 @@
 
 
 
-  // .main-nav--nojs .main-nav__toggle {
-  //   display: none;
-  // }
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
 
-  // .main-nav--nojs .main-nav__wrapper {
-  //   position: static;
-  //   min-height: 0;
-  // }
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
 
-  // .main-nav--nojs .site-list__item {
-  //   display: block;
-  // }
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
 
-  // .main-nav--nojs .site-list__item--active a {
-  //   padding-right: 21px;
-  //   padding-left: 21px;
-  //   text-align: left;
-  // }
+  .main-nav--nojs .site-list__item--active a {
+    padding-right: 21px;
+    padding-left: 21px;
+    text-align: left;
+  }
 
-  // .main-nav--nojs .user-list__item {
-  //   display: block;
-  //   background-color: #6a4d38;
-  // }
+  .main-nav--nojs .user-list__item {
+    display: block;
+    background-color: @blue-main;
+  }
 
 }
 
