--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -61,24 +61,24 @@
     }
 }
 
-.site-list__toogle{
-  background-image: url(../img/icon-menu-close.svg);
-  background-color: @blue-main;
-  width: 22px;
-  height: 22px;
-  border: none;
-  position: absolute;
-  cursor: pointer;
-  top: 17px; right: 20px; bottom: 16px;
-    &:hover,
-    &:focus {
-      opacity: .6;
-    }
-    &:active{
-      opacity: .3;
-    }
+// .site-list__toogle{
+//   background-image: url(../img/icon-menu-close.svg);
+//   background-color: @blue-main;
+//   width: 22px;
+//   height: 22px;
+//   border: none;
+//   position: absolute;
+//   cursor: pointer;
+//   top: 17px; right: 20px; bottom: 16px;
+//     &:hover,
+//     &:focus {
+//       opacity: .6;
+//     }
+//     &:active{
+//       opacity: .3;
+//     }
 
-    @media (min-width: @tablet-width){
-      display: none;
-    }
-}
+//     @media (min-width: @tablet-width){
+//       display: none;
+//     }
+// }
