--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -103,9 +103,9 @@
     min-height: 0;
   }
 
-  .main-nav--nojs .site-list__item {
-    display: block;
-  }
+  // .main-nav--nojs .site-list__item {
+  //   display: block;
+  // }
 
   .main-nav--nojs .site-list__item--active a {
     padding-right: 21px;
