--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -20,15 +20,6 @@
 
   @media (min-width: @tablet-width){
     color: @black;
-      // &:hover,
-      // &:focus {
-      //   color: @blue-main;
-      //   background-color: @white;
-      // }
-      // &:active {
-      //   opacity: .3;
-      //   background-color: @white;
-      // }
   }
 }
 
@@ -38,8 +29,10 @@
   width: 100%;
   text-align: center;
   position: relative;
-  text-align: center;
-  display: block;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
       @media (min-width: @tablet-width){
       box-shadow: none;
@@ -61,24 +54,3 @@
     }
 }
 
-// .site-list__toogle{
-//   background-image: url(../img/icon-menu-close.svg);
-//   background-color: @blue-main;
-//   width: 22px;
-//   height: 22px;
-//   border: none;
-//   position: absolute;
-//   cursor: pointer;
-//   top: 17px; right: 20px; bottom: 16px;
-//     &:hover,
-//     &:focus {
-//       opacity: .6;
-//     }
-//     &:active{
-//       opacity: .3;
-//     }
-
-//     @media (min-width: @tablet-width){
-//       display: none;
-//     }
-// }
