--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -8,6 +8,9 @@
 @dark-grey: #333333;
 @blue-hover: #669EC0;
 @blue-down: #5496BD;
+@grey-wrap: #E7E5E5;
+@grey-contacts: #E6E6E6;
+@grey-catalog: #EAEAEA;
 
 // viewports
 
