--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -1,16 +1,13 @@
 .about{
   text-transform: uppercase;
   margin: 0 auto;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-}
-.about__wrapper{
   text-align: center;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+
+  margin-top: 50px;
+  // padding: 50px;
 }
 
 .about-title{
@@ -19,7 +16,6 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-  // margin: 0;
 }
 
 .about-text{
@@ -29,55 +25,66 @@
   font-size: 14px;
   line-height: 26px;
   color: @dark-grey;
-  // margin: 0;
+
   margin-top: 26px;
 }
 
 .about-index{
+  position: relative;
   width: 285px;
-
-  margin: 32px auto 11px;
     @media (min-width: @tablet-width) {
       width: 520px;
-
-      margin: 44px auto 53px;
+      // margin: 44px auto 53px;
     }
     @media (min-width: @desktop-width) {
-      margin: 55px auto 41px;
+      width: 483px;
+      // margin: 55px auto 41px;
     }
+
+  @media (max-width: @mobile-width-only){
+
+    &:before{
+      content: "";
+      width: 100%;
+      height: 37px;
+      position: absolute;
+      bottom: -37px;
+      left: 0;
+      z-index: 3;
+      background-image: url(../img/about-triangle.svg);
+      background-repeat: no-repeat;
+      background-position: center bottom;
+      background-size: cover;
+    }
+  }
 }
 
 .about-form{
   width: 306px;
-  height: 151px;
+  // height: 151px;
     @media (min-width: @tablet-width) {
       // padding: 44px 64px 0;
       width: 434px;
-      height: 129px;
+      // height: 129px;
     }
 
     @media (min-width: @desktop-width) {
       max-width: 434px;
-      height: 129px;
+      // height: 129px;
     }
 }
 
 .about-catalog{
   width: 299px;
-  height: 153px;
+  // height: 153px;
       @media (min-width: @tablet-width) {
         width: 458px;
-        height: 130px;
+        // height: 130px;
       }
 
       @media (min-width: @desktop-width) {
         max-width: 458px;
-        height: 118px;
+        // height: 118px;
       }
 }
 
-.about-triangle{
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
-}
