--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -1,10 +1,13 @@
-.attractions-list{
-  list-style: none;
+.attractions__list{
   margin-bottom: 51px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
     @media (min-width: @tablet-width){
       display: flex;
       flex-wrap: wrap;
+      flex-direction: row;
       justify-content: space-between;
 
       width: 484px;
@@ -21,7 +24,7 @@
     }
 }
 
-.attractions-title{
+.attractions__title{
   text-align: center;
   margin-bottom: 25px;
     @media (min-width: @tablet-width){
@@ -29,13 +32,13 @@
     }
 }
 
-
-.attractions-item label{
+.attractions__item label{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+  text-transform: none;
 }
 
 .attractions fieldset{
