--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -8,4 +8,9 @@
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
