--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,3 +1,15 @@
+.copyright{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+
+  @media (min-width: @tablet-width){
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
 .copyright__text{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
