--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -1,30 +1,32 @@
-.impression-list{
-    list-style: none;
-    // @media (min-width: @tablet-width){
-    //   width: 303px;
-    // }
+.impression{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+    @media (min-width: @tablet-width){
+      justify-content: flex-start;
+      width: 50%;
+      order: -3;
+    }
+  }
 
-    // @media (min-width: @desktop-width){
-    //   width: 344px;
-    // }
+.impression__item{
+  margin-bottom: 43px;
+    @media (min-width: @tablet-width){
+      margin-bottom: 52px;
+    }
+
 }
-
-.impression-item label{
+.impression__item label{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+  text-transform: none;
 }
 
 .impression fieldset{
   border: none;
 }
 
-.impression{
-  width: 100%;
-  @media (min-width: @tablet-width){
-    width: 50%;
-    order: -3;
-  }
-}
+
