--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,26 +1,44 @@
 .intro{
   background-image: url(../img/intro-back.jpg);
   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   max-width: 100%;
   height: 389px;
-  background-size: cover;
-
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
+  // padding: 20px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro-back@2x.jpg");
+    }
+
     @media (min-width: @tablet-width){
       height: 518px;
     }
+
+    img{
+      max-width: 100%;
+    }
+
+    &:before{
+      content: "";
+      width: 100%;
+      height: 58px;
+      position: absolute;
+      bottom: 0px;
+      left: 0;
+      z-index: 3;
+      background-image: url(../img/intro-triangle.svg);
+      background-repeat: no-repeat;
+      background-position: center bottom;
+      background-size: cover;
+    }
+
 }
 
-.intro-triangle{
-  z-index: 2;
-  height: 56px;
-  max-width: 100%;
-  object-fit: cover;
-  margin-top: -56px;
-}
 
 .intro-text{
   z-index: 1;
@@ -42,24 +60,20 @@
 }
 
 .intro-logo{
-  // background-image: url(../img/intro-logo.svg);
-  // background-repeat: no-repeat;
-  width: 229px;
+  width: 230px;
   height: 39px;
-  margin: 0 auto 0;
-  padding-top: 52px;
+
+  @media (min-width: @tablet-width){
+    width: 460px;
+    height: 80px;
+  }
 
   img{
     width: 100%;
     object-fit: cover;
   }
 
-    @media (min-width: @tablet-width){
-      width: 461px;
-      height: 80px;
-      padding-top: 72px;
-      // height: 350px;
-    }
+
 }
 
 
