--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,5 +1,9 @@
 .map{
-	width: 100%;
-	height: 100%;
-	border: none;
+  height: 350px;
+
+  iframe{
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
 }
