--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -1,67 +1,74 @@
-.reasons-item{
+.reasons{
   background-color: @grey;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
+  @media (min-width: @tablet-width){
+    min-height: 256px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
+
+.reasons--reverse{
+  @media (max-width: @mobile-width-only){
+    display: flex;
+    flex-direction: column;
+    .reasons-item__wrapper{
+      order: -1;
+    }
+  }
+}
+
+// .reasons-item__img:nth-child(2){
+//   @media (max-width: @mobile-width-only) {
+//     .reasons{
+//       display: flex;
+//       justify-content: space-between;
+//     }
+
+//     order: 2;
+//   }
+// }
 
 .reasons-item__wrapper{
   text-align: center;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 
-  width: 320px;
-  height: 191px;
-  @media (min-width: @tablet-width){
-    width: 256px;
-    height: 256px;
-  }
-
-  @media (min-width: @desktop-width){
-    width: 400px;
-  }
+  min-height: 191px;
+  // width: 320px;
+  // padding: 10px;
+  width: 100%;
+    @media (min-width: @tablet-width){
+      width: 33.333333%;
+    }
 }
 
-.reasons{
-  background-color: @grey;
-  @media (min-width: @tablet-width){
-    height: 256px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}
-.reasons-img .reasons-item {
+
+.reasons-img .reasons-item__wrapper {
   background-color: @blue-main;
   color: @white;
-    @media (min-width: @tablet-width){
-      display: flex;
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-between;
-    }
 }
 
-.reasons-img img{
+.reasons-item__img{
   width: 100%;
-  object-fit: cover;
   height: 260px;
-    @media (min-width: @tablet-width){
-      height: 256px;
+
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+
+      @media (min-width: @tablet-width){
+        height: 100%;
+      }
     }
 
-}
-
-.reasons_list{
-  @media (min-width: @tablet-width){
-    display: flex;
-    justify-content: space-between;
-  }
+    @media (min-width: @tablet-width){
+      width: 66.666666%;
+    }
 }
 
 .reasons-item__title{
