--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -3,27 +3,31 @@
 //   flex-direction: column;
 // }
 
-.review-item{
+.review__item{
   display: flex;
   flex-direction: column;
+
 }
 
-.review-item textarea{
-  width: 279px;
+.review__item textarea{
+
   height: 160px;
   background-color: @form-grey;
   margin: auto;
   border: none;
-    @media (min-width: @tablet-width){
+
+  width: 279px;
+  @media (min-width: @tablet-width){
     width: 648px;
     }
 
     @media (min-width: @desktop-width){
       width: 960px;
     }
+
 }
 
-.review-item ::placeholder{
+.review__item ::placeholder{
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -32,7 +36,7 @@
   color: @black;
 }
 
-.review-title{
+.review__title{
   text-align: center;
   margin-bottom: 15px;
     @media (min-width: @tablet-width){
@@ -40,12 +44,12 @@
     }
 }
 
-.review-send{
+.review__send{
   width: 280px;
   height: 58px;
 }
 
-.review-send__wrapper{
+.review__send--wrapper{
   display: flex;
   justify-content: space-between;
   margin: 51px auto 50px;
