--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,7 +1,6 @@
-.social__list{
-  list-style: none;
+.social{
+
   width: 151px;
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,7 +12,6 @@
   text-align: center;
 
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
