Декоративные элементы страницы каталога

--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -20,15 +20,15 @@
 
   @media (min-width: @tablet-width){
     color: @black;
-      // &:hover,
-      // &:focus {
-      //   color: @blue-main;
-      //   background-color: @white;
-      // }
-      // &:active {
-      //   opacity: .3;
-      //   background-color: @white;
-      // }
+      &:hover,
+      &:focus {
+        color: @blue-main;
+        background-color: @white;
+      }
+      &:active {
+        opacity: .3;
+        background-color: @white;
+      }
   }
 }
 
